syntax = "proto3";
package grpc_notification;

option go_package = "/grpc_notification";

message Notification {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string role = 5;
}
message ListNotification {
    repeated Notification notifications = 1;
}


message NotificationRequest {
    int32 id = 1;
    int32 userLoggedId = 2;
}

service NotificationService {
    rpc Get(NotificationRequest) returns (Notification) {}
    rpc List(NotificationRequest) returns (ListNotification) {}
}